WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
292830
[Swift in WebKit] The Swift implementation of WKGroupSession is incorrect
https://bugs.webkit.org/show_bug.cgi?id=292830
Summary
[Swift in WebKit] The Swift implementation of WKGroupSession is incorrect
Richard Robinson
Reported
2025-05-10 20:10:23 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-05-10 20:10:32 PDT
<
rdar://problem/151089048
>
Richard Robinson
Comment 2
2025-05-10 20:11:35 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/45216
EWS
Comment 3
2025-05-12 23:15:15 PDT
Committed
294828@main
(87ffa9eb985d): <
https://commits.webkit.org/294828@main
> Reviewed commits have been landed. Closing PR #45216 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug