[Swift in WebKit] The Swift implementation of WKGroupSession is incorrect https://bugs.webkit.org/show_bug.cgi?id=292830 rdar://151089048

Reviewed by Elliott Williams.

Fix the implementation of WKGroupSession to properly use `@_objcImplementation.`

* Source/WebKit/Configurations/WebKitSwift.xcconfig:

- Remove WK_EXCLUDED_COORDINATOR_FILES and WK_HAVE_COORDINATOR in favor of just using
normal compile-time guards. Plus, neither of these were even doing anything to begin
with since `WKGroupSession.swift` never existed prior to this PR.

- Remove `WK_EXCLUDED_TEXT_STYLE_MANAGER_FILES`, which doesn't actually exist.

- Add missing semicolons for consistent style

* Source/WebKit/UIProcess/Cocoa/GroupActivities/GroupActivitiesCoordinator.h:
* Source/WebKit/UIProcess/Cocoa/GroupActivities/GroupActivitiesCoordinator.mm:
* Source/WebKit/UIProcess/Cocoa/GroupActivities/GroupActivitiesSession.h:
* Source/WebKit/UIProcess/Cocoa/GroupActivities/GroupActivitiesSession.mm:
* Source/WebKit/UIProcess/Cocoa/GroupActivities/GroupActivitiesSessionNotifier.h:
* Source/WebKit/UIProcess/Cocoa/GroupActivities/GroupActivitiesSessionNotifier.mm:
* Source/WebKit/UIProcess/WebPageProxy.cpp:

- Enforce consistency of the compilation conditions between the different files by adding
`USE(APPLE_INTERNAL_SDK)` in places it was previously missing from.

* Source/WebKit/WebKitSwift/GroupActivities/WKGroupSession.h: Renamed from Source/WebKit/UIProcess/Cocoa/GroupActivities/WKGroupSession.h.

- Move to WKS directory for consistency
- Remove unneeded forward declarations
- Use `nullable` istead of `_Nullable` for consistency
- Remove unnecessary `init` declaration
- Remove unnecessary `strong` attributes

* Source/WebKit/WebKitSwift/GroupActivities/WKGroupSession.swift: Renamed from Source/WebKit/WebKitSwift/GroupActivities/GroupSession.swift.

- Repace `canImport` with the preferred way, using normal compilation conditions.
- Alphabetize the imports
- Use `@_objcImplementation`, and remove unnecessary `public`, `@objc`, and availability attributes
- Enforce consistency by renaming `URLActivityWrapper` to `WKURLActivity`
- Enforce consistency by creating an adopter initializer for `WKGroupSessionState`
- Enforce consistency by removing `self.` when applicable

Canonical link: https://commits.webkit.org/294828@main