Source/WebKit/WebKitSwift/WebKitSwift.h
@@ -25,6 +25,7 @@
 
 #import "LinearMediaKitExtras.h"
 #import "RealityKitBridging.h"
+#import "WKGroupSession.h"
 #import "WKIntelligenceReplacementTextEffectCoordinator.h"
 #import "WKIntelligenceSmartReplyTextEffectCoordinator.h"
 #import "WKIntelligenceTextEffectCoordinator.h"
